--- a/video.html
+++ b/video.html
@@ -8,7 +8,8 @@
         <h1>German rocket program, 1944 (in color)</h1>
 
         <a target=" _blank" href="https://en.wikipedia.org/wiki/V-2_rocket"> 
-        <video src="./Desktop 2024.02.09 - 23.42.35.01.mp4" 
+        <video src="./Desktop 2024.02.09 - 23.42.35.01.mp4"
+         style="width: 100%; height: 100%;" 
         width="900px" controls autoplay loop></video>
         </a>
     </body>
